# Blog-RESTful-APIs

./: README.md
blogapi/: pyproject.toml
blogapi/config/: settings.py  urls.py
blogapi/posts/: permissions.py  serializers.py  tests.py  urls.py  views.py
blogapi/posts/migrations/: 0001_initial.py
