[tool.poetry]
name = "blogapi"
version = "0.1.0"
description = ""
authors = ["abood-74 <abdelrahmanashour45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
